@@ -19,6 +19,7 @@
   <property name="focus_on_map">False</property>
   <property name="urgency_hint">False</property>
   <signal name="destroy" handler="on_window_destroy" last_modification_time="Wed, 18 Apr 2007 01:02:17 GMT"/>
+  <signal name="configure_event" handler="on_window_configure_event" last_modification_time="Wed, 25 Apr 2007 02:26:10 GMT"/>
 
   <child>
     <widget class="GtkVBox" id="window_box">
@@ -1233,7 +1234,7 @@ Custom</property>
 	      <child>
 		<widget class="GtkLabel" id="name">
 		  <property name="visible">True</property>
-		  <property name="label" translatable="yes">&lt;span size=&quot;xx-large&quot;&gt;&lt;b&gt;Pymailheaders Alpha 0.4&lt;/b&gt;&lt;/span&gt;</property>
+		  <property name="label" translatable="yes"></property>
 		  <property name="use_underline">False</property>
 		  <property name="use_markup">True</property>
 		  <property name="justify">GTK_JUSTIFY_CENTER</property>
@@ -1309,7 +1310,7 @@ Custom</property>
 		<widget class="GtkLabel" id="website">
 		  <property name="visible">True</property>
 		  <property name="can_focus">True</property>
-		  <property name="label" translatable="yes">http://zeegeek.googlepages.com</property>
+		  <property name="label" translatable="yes"></property>
 		  <property name="use_underline">False</property>
 		  <property name="use_markup">False</property>
 		  <property name="justify">GTK_JUSTIFY_CENTER</property>
