@@ -1,3 +1,8 @@
+2007-04-24  Neil Shi  <zeegeek@gmail.com>
+
+	* gui.py (gui.__position_changed): Now it remembers position on
+	quit correctly.
+
 2007-04-20  Neil Shi  <zeegeek@gmail.com>
 
 	* pymailheaders.py (main): Now it fetches all messages and pass
